--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
