--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.1",
-    "gsap": "^3.12.5",
+    "motion": "^11.16.0",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
